[package]
name = "ravendoor"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
aes = "0.8"
cipher = "0.4"
cbc = "0.1"
rand = "0.8"
hex = "0.4"
whoami = "1.4"
sysinfo = "0.29"
base64 = "0.21"
serde_json = "1.0"
local-ip-address = "0.5"
gethostname = "0.3"
chrono = "0.4" 